# Notebook-Plus-Plus

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN-NOTES.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  app.vue  docker-compose.standalone.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  eslint.polyfill.mjs  global claude.md  installation-instructions.html  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
components/: AiKeysManager.vue  ApiSettings.vue  AppLogo.vue  AppMark.vue  AppPage.vue  AppSidebar.vue  BackupManager.vue  CanvasIsland.vue  CommandPalette.vue  DocHistory.vue  DocList.vue  EditorIsland.vue  EmptyState.vue  FormField.vue  IconArchive.vue  IconDrafts.vue  IconFolder.vue  IconOverview.vue  IconStarred.vue  IconTrash.vue  IconUser.vue  MoveNoteDialog.vue  NewDocChooser.vue  OfflineBanner.vue  PreferencesPanel.vue  RegistrationSetting.vue  SecurityPanel.vue  SidebarNote.vue  TabBar.vue  UiButton.vue  UiDropdown.vue  UiInput.vue  UiMenuItem.vue  UiModal.vue
composables/: useAppearance.ts  useClickOutside.ts  useCommandPalette.ts  useNewDoc.ts  usePreferences.ts  useTabs.ts  useTree.ts
docker/: entrypoint.sh
docs/: BUILD-PROGRESS.md  api.md  architecture.md  backups.md  database.md  design-system.md  gotchas.md  notebookpp-build-prompt.md
e2e/: ai.spec.ts  api-probe.mjs  auth.spec.ts  axe-debug.mjs  (+28 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: lib.rs
(+161 files in other folders)
