[package]
name = "app"
version = "0.62.15"
description = "Notebook++ Desktop — self-hosted notes & knowledge base"
authors = ["Notebook++"]
license = "MIT"
repository = "https://github.com/uri-travoski/Notebook-Plus-Plus"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
